[package]
name = "grd-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock", "std", "wasmbind", "rkyv"], default-features = false }
derive_more = "0.99"
env_logger = "0.11"
extend = "1"
culpa = "1"
futures = "0.3"
itertools = "0.13"
log = "0.4"
num-traits = "0.2"
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["gzip", "brotli", "json", "rustls-tls-native-roots"], default-features = false }
rkyv = "0.7"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shrinkwraprs = "0.3"
smart-default = "0.7"
sugars = "3"
tap = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize", "strict-macro", "enable-interning"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls"] }

# [lints]
# workspace = true

[features]
chrono_hack = []
