[package]
name = "utils"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anstyle = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock", "std", "wasmbind", "rkyv"], default-features = false }
culpa = "1"
derive_more = { version = "2", features = ["full"] }
env_logger = "0.11"
extend = "1"
futures = "0.3"
itertools = "0.14"
log = "0.4"
num-traits = "0.2"
rand = "0.9"
reqwest = { version = "0.12", features = ["gzip", "brotli", "json", "rustls-tls-native-roots"], default-features = false }
rkyv = "0.8"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smart-default = "0.7"
tap = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt"], default-features = false }
utils-macros = { path = "macros" }
synonym = { version = "0.1", optional = true }

[dev-dependencies]
mockito = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize", "strict-macro", "enable-interning"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
sentry = { version = "0.38", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls"] }

# [lints]
# workspace = true

[features]
chrono_hack = ["custom_duration"]
custom_duration = ["synonym"]
