[package]
name = "utils-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["visit", "full", "extra-traits", "parsing", "proc-macro", "printing", "clone-impls"], default-features = false }
